# LEAD-RADAR

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: agent_worker.py  cli.py  database.py  main.py  models.py  schemas.py  seed.py  settings.py
app/collectors/: base.py  gitee.py  github.py  html_links.py  rss.py  v2ex.py
app/services/: acquisition_hub.py  acquisition_ops.py  agent_queue.py  analytics.py  b2b_accounts.py  b2b_enrichment.py  cadence.py  candidates.py  company_profiles.py  compliance.py  contact_enrichment.py  contact_status.py  contact_workbench.py  contacts.py  crawl_control.py  dedupe.py  demand_radar.py  detail_fetcher.py  domestic_identity.py  domestic_review.py  domestic_search_strategy.py  dual_mode_scoring.py  feedback.py  feedback_ops.py  freshness.py  (+30 more)
docs/: README.md  acceptance_report_2026-06-15.md  data_model_dual_mode.md  dual_mode_acquisition_audit.md  dual_mode_acquisition_plan.md  github_crawler_tools_audit.md  github_lead_tools_audit.md  implementation_tasks_dual_mode.md  p11_quality_engine_report.md  p12_session_collection_report.md  p13_contact_waterfall_report.md  p14_today_ops_report.md  p15_learning_loop_report.md  p16_ui_productization_report.md  p17_execution_report.md  p17_productized_lead_radar_plan.md  p18_execution_report.md  p19_execution_report.md  p20_execution_report.md  p21_execution_report.md  p22_execution_report.md  p23_execution_report.md  p24_execution_report.md  p25_execution_report.md  practical_product_execution_plan.md  prd_dual_mode_acquisition.md  scoring_rules_dual_mode.md
(+36 files in other folders)
