[project]
name = "lead-radar"
version = "0.1.0"
description = "Lead radar for dynamic residential proxy buyer-intent monitoring."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.4.0",
    "playwright>=1.49.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.scripts]
lead-radar = "app.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]

[tool.ruff]
line-length = 100
